# RSNA

./: .gitignore  Model1.ipynb  Preprocess.py  Preprocess2.py  README.md  main2.py  model.py  preprocess.py  pyproject.toml  scratch.ipynb  scratch_2.ipynb  scratch_3.ipynb  scratch_4.ipynb  scratch_8.ipynb
