[tool.poetry]
name = "rsna"
version = "0.1.0"
description = ""
authors = ["Amila Welihinda <amilajack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
numpy = "^1.17.4"
seaborn = "^0.9.0"
matplotlib = "^3.1.1"
pydicom = "^1.3.0"
pillow = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
